# cmake-installation

./: README.md
test/: Makefile  main.cpp
tudat/: CMakeLists.txt  Makefile
tudat/include/: types.hpp
tudat/src/: types.cpp
